--- a/apps/WEB/PruebaTecnicaWDL.WebApp/Views/Home/Index.cshtml
+++ b/apps/WEB/PruebaTecnicaWDL.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,58 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using PruebaTecnicaWDL.Application.Employees.GetAllEmployee
+@model List<GetEmployeeDTO>
+
+@{
+    ViewData["Title"] = "home";
+    var idCategoria = ViewBag.categoriaId;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+
+@if (Model.Count != 0)
+{
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th scope="col">Modificar</th>
+                <th scope="col">Telefono</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Nombre</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {  
+                <tr>
+                    <th scope="row">
+                        <a class="btn btn-outline-info" 
+                           asp-area="" 
+                           asp-controller="Home" 
+                           asp-action="Modificar"
+                           asp-route-idEmployee="@employee.Id">Ir
+                        </a>
+                    </th>
+                    <td>@employee.CellPhone</td>
+                    <td>@employee.Date</td>
+                    <td>@employee.LastName</td>
+                    <td>@employee.Name</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    
+}
+else
+{
+    <div class="card">
+        <div class="card-header">
+            comenzamos
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Sin Registros aun</h5>
+            <p class="card-text">aun sin empleados</p>
+            <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Crear">Crear</a>
+        </div>
+    </div>
+}
